<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/input_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/cs_16_dp"
        android:layout_marginEnd="@dimen/cs_16_dp"
        tools:context=".ui.fragment.InputFormFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <TextView
            android:id="@+id/tv_label_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_lable"
            android:textSize="@dimen/cs_17_sp"
            android:layout_margin="@dimen/cs_30_dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_center"
            app:layout_constraintTop_toTopOf="@+id/et_score"
            app:layout_constraintBottom_toBottomOf="@+id/et_score"
            />

        <EditText
            android:id="@+id/et_score"
            android:layout_width="@dimen/cs_50_dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/default_score"
            android:textSize="@dimen/cs_17_sp"
            android:inputType="number"
            android:layout_margin="@dimen/cs_30_dp"
            app:layout_constraintStart_toEndOf="@+id/guideline_center"
            app:layout_constraintTop_toBottomOf="@+id/guideline_top"
            />

        <TextView
            android:id="@+id/tv_label_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_lable"
            android:textSize="@dimen/cs_17_sp"
            app:layout_constraintStart_toStartOf="@+id/tv_label_score"
            app:layout_constraintTop_toTopOf="@+id/et_tag"
            app:layout_constraintBottom_toBottomOf="@+id/et_tag"
            />

        <EditText
            android:id="@+id/et_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_tag"
            android:textSize="@dimen/cs_17_sp"
            android:maxLines="3"
            android:ellipsize="end"
            tools:text="@tools:sample/lorem/random"
            android:layout_margin="@dimen/cs_15_dp"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline_center"
            app:layout_constraintTop_toBottomOf="@+id/et_score"
            />

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cs_30_dp"
            android:paddingStart="@dimen/cs_10_dp"
            android:paddingEnd="@dimen/cs_10_dp"
            app:layout_constraintTop_toBottomOf="@+id/et_tag"
            app:layout_constraintStart_toStartOf="@+id/guideline_center"
            android:text="@string/submit_button_text"
            android:background="@color/purple_500"
            app:layout_constraintEnd_toStartOf="@+id/guideline_center"

            />
        <FrameLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activity.CallSignActivity" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
